<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateStudentActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/no_content_label"
        android:visibility="visible"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/student_background" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/id_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/phone_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvId"
        app:layout_constraintStart_toStartOf="@+id/tvId"
        app:layout_constraintTop_toBottomOf="@+id/tvId" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/address_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvPhone"
        app:layout_constraintStart_toStartOf="@+id/tvPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/tvName"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <EditText
        android:id="@+id/inputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/tvId"
        app:layout_constraintStart_toEndOf="@+id/tvId"
        app:layout_constraintTop_toTopOf="@+id/tvId" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/tvPhone"
        app:layout_constraintStart_toEndOf="@+id/tvPhone"
        app:layout_constraintTop_toTopOf="@+id/tvPhone" />

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/tvAddress"
        app:layout_constraintStart_toEndOf="@+id/tvAddress"
        app:layout_constraintTop_toTopOf="@+id/tvAddress" />

    <CheckBox
        android:id="@+id/checkBoxEnrolled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/checked_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="closeActivity"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="saveStudent" />

</androidx.constraintlayout.widget.ConstraintLayout>